# qp_oases

./: CMakeLists.txt  Makefile  VERSIONS.txt  make.mk  make_linux.mk  make_osx.mk  make_windows.mk  package.xml
doc/: doxygen.config
examples/: Makefile  runAllOqpExamples.cpp
include/qpOASES/: Indexlist.hpp
include/qpOASES/extras/: OQPinterface.hpp
interfaces/matlab/: Makefile  make.m  qpOASES.cpp  qpOASES_matlab_utils.cpp  qpOASES_sequence.cpp  qpOASES_sequenceSB.cpp
interfaces/octave/: make.m  qpOASES_sequence.cpp
interfaces/simulink/: qpOASES_QProblem.cpp  qpOASES_SQProblem.cpp
src/: Makefile  OQPinterface.cpp  QProblem.cpp  QProblemB.cpp
